# supermarkt

./: .clang-format  .coverage  .env  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  Dockerfile.exporter  LICENSE  README.md  aufgaben.txt  conftest.py  coverage.json  coverage.txt  docker-compose.yml  export_metrics.py  gui_notizen.tyt  logfile.txt  loggingfile.txt  notizen.txt  prometheus.yml  py_bindings.pyi  pyproject.toml  pytest.ini  run_cpp_coverage.sh  run_prometheus.sh  run_python_tests.sh  setup.py  start.sh  supermarkt_logging.txt
.github/workflows/: ci.yml
GUI/: dummy.csv  example.py  gui.py  python_tests.py  simples.py  test.py
bindings/: python_bindings.cpp  statistik_bind.cpp
c++_coverage/: index.datum.cpp.90939076dc6fef154d2f956609923399.html  index.functions.html  index.haendler.cpp.6d6361fb50654fba2276a897d5830717.html  index.html  index.kassenzettel.cpp.72121a2f6d2b332bb09115d71a0b6da1.html  index.konto.cpp.8de3f59e87fbb2a2445b1c4227a6124d.html  index.kunde.cpp.5eac0b83f4e8a43cdf129fca8bba1adf.html  index.logging.cpp.13860ad7a053eec45742708dab06198a.html  index.main.cpp.7ec3c68a81efff79b6ca22ac1f1eabba.html  index.main.cpp.c9f842578b2c6ed79263195baaafa203.html  index.person.cpp.183a0f2dc9028c0823ac582fe77e5fef.html  index.produkt.cpp.968ac4af7a48f349a820790989d1435f.html  index.read_data.cpp.736e1449ee613d5ef3aefdba0a65d3ad.html  index.statistik.cpp.99fa14730fed46aa5866d33c808c0474.html  index.supermarkt.cpp.957c7e4a457f841ad7210874ab66f4c1.html  index.test_datum.cpp.d19dec121c8aa105d656cd3addfaebcc.html  index.test_haendler.cpp.9f443c75e73c96989610b2ad924318b2.html  index.test_kassenzettel.cpp.0670cdd38b6815a8722a049f0c26cfcb.html  index.test_konto.cpp.9b03b45eef75f51869872d8e7d55629f.html  index.test_kunde.cpp.0b106ff4b4a2aeac4ed9ea4de20d9528.html  index.test_logging.cpp.0e5cf13de638801e2be7dca04ac963f4.html  index.test_person.cpp.a067b75b116ccbc77851152133272140.html  index.test_produkt.cpp.a329e296db229a42c694bd853c07c5fc.html  index.test_read_data.cpp.bcfc78d1c6cd2831c3cbb4a4134a141c.html  index.test_statistik.cpp.780b9cf03bfbe51f5f5e206a55ea7d3f.html  index.test_supermarkt.cpp.734a3bc38b2688c700e5e2be8924ceff.html  index.test_warenkorb.cpp.bdf087abcde42f5a358255609f7c52e1.html  index.warenkorb.cpp.fe23b90779e199d14cbe0ddccfb763f1.html  summary.txt
cpp-coverage/: summary.txt
cpp_tests/: main.cpp  test_datum.cpp  test_haendler.cpp  test_kassenzettel.cpp  test_konto.cpp  test_kunde.cpp  test_logging.cpp  test_person.cpp  test_produkt.cpp  test_read_data.cpp  test_statistik.cpp  test_supermarkt.cpp  test_warenkorb.cpp
data/: haendler.txt  inventur.txt  kunden.txt  warenkoerbe.txt
data/kassenzettel/: kunde_0.txt  kunde_1.txt  kunde_2.txt  kunde_3.txt  kunde_4.txt  kunde_5.txt
data/supermarkt_0/: haendler.txt  kunden.txt  produkte.txt  warenkoerbe.txt
data/supermarkt_1/: haendler.txt  kunden.txt  produkte.txt  warenkoerbe.txt
inc/base/: datum.hpp  haendler.hpp  kassenzettel.hpp  konto.hpp  kunde.hpp  person.hpp  produkt.hpp  supermarkt.hpp  warenkorb.hpp
inc/tests/: test_datum.hpp  test_haendler.hpp  test_kassenzettel.hpp  test_konto.hpp  test_kunde.hpp  test_logging.hpp  test_person.hpp  test_produkt.hpp  test_read_data.hpp  test_statistik.hpp  test_supermarkt.hpp  test_warenkorb.hpp
inc/utils/: gui.hpp  logging.hpp  read_data.hpp  readdata.hpp  statistik.hpp  tests.hpp  user_interface.hpp  utilities.hpp
py_bindings.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python-coverage/: coverage.txt  index.html
python_tests/: test_datum.py  test_haendler.py  test_kassenzettel.py  test_konto.py  test_kunde.py  test_logging.py  test_person.py  test_produkt.py  test_read_data.py  test_statistik.py  test_supermarkt.py  test_warenkorb.py
src/: datum.cpp  haendler.cpp  kassenzettel.cpp  konto.cpp  kunde.cpp  logging.cpp  main.cpp  person.cpp  produkt.cpp  read_data.cpp  statistik.cpp  supermarkt.cpp  tests.cpp  warenkorb.cpp
